--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "eskuz-loratu",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
     "firebase": "^10.13.2",
     "pinia": "^2.2.2",
+    "register-service-worker": "^1.7.2",
+    "swiper": "^11.1.14",
     "uid": "^2.0.2",
+    "vite-plugin-pwa": "^0.20.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vuefire": "^3.2.0"
+    "vuefire": "^3.2.0",
+    "workbox-precaching": "^7.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "vite": "^5.3.1"
-  }
+  },
+  "type": "module"
 }
