--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "eskuz-loratu",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build": "vite build",
-    "dev": "vite",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "firebase": "^10.13.2",
-    "pinia": "^2.2.2",
-    "register-service-worker": "^1.7.2",
-    "swiper": "^11.1.14",
-    "uid": "^2.0.2",
-    "vite-plugin-pwa": "^0.20.5",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3",
-    "vuefire": "^3.2.0",
-    "workbox-precaching": "^7.1.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "vite": "^5.3.1"
-  },
-  "type": "module"
+    "name": "eskuz-loratu",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "build": "vite build",
+        "dev": "vite",
+        "serve": "cross-env PORT=4433 npx serve dist",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "firebase": "^10.13.2",
+        "pinia": "^2.2.2",
+        "register-service-worker": "^1.7.2",
+        "swiper": "^11.1.14",
+        "uid": "^2.0.2",
+        "vue": "^3.4.29",
+        "vue-router": "^4.3.3",
+        "vuefire": "^3.2.0",
+        "workbox-precaching": "^7.1.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.5",
+        "@vue/cli-plugin-pwa": "~5.0.0",
+        "cross-env": "^7.0.3",
+        "serve": "^14.2.3",
+        "vite": "^5.3.1",
+        "vite-plugin-pwa": "^0.20.5"
+    },
+    "type": "module"
 }
