--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
   },
   "exclude": ["node_modules", "dist"]
 }
