--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-icons/vue": "^1.0.0",
+        "@vueuse/core": "^11.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "embla-carousel-autoplay": "^8.3.0",
+        "embla-carousel-vue": "^8.3.0",
         "firebase": "^10.13.2",
         "pinia": "^2.2.2",
+        "radix-vue": "^1.9.6",
         "register-service-worker": "^1.7.2",
-        "swiper": "^11.1.14",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7",
         "uid": "^2.0.2",
         "vue": "^3.4.29",
         "vue-router": "^4.3.3",
@@ -20,10 +28,14 @@
         "workbox-precaching": "^7.1.0"
     },
     "devDependencies": {
+        "@types/node": "^22.7.4",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vue/cli-plugin-pwa": "~5.0.0",
+        "autoprefixer": "^10.4.20",
         "cross-env": "^7.0.3",
+        "postcss": "^8.4.47",
         "serve": "^14.2.3",
+        "tailwindcss": "^3.4.13",
         "vite": "^5.3.1",
         "vite-plugin-pwa": "^0.20.5"
     },
