--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "eskuz-loratu",
     "version": "0.0.0",
+    "main": "index.js",
+    "type": "module",
     "private": true,
     "scripts": {
         "build": "vite build",
@@ -38,6 +40,5 @@
         "tailwindcss": "^3.4.13",
         "vite": "^5.3.1",
         "vite-plugin-pwa": "^0.20.5"
-    },
-    "type": "module"
+    }
 }
