--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
         "tailwindcss-animate": "^1.0.7",
         "uid": "^2.0.2",
         "vue": "^3.4.29",
+        "vue-i18n": "^10.0.4",
         "vue-router": "^4.3.3",
         "vuefire": "^3.2.0",
         "workbox-precaching": "^7.1.0"
     },
     "devDependencies": {
+        "@intlify/unplugin-vue-i18n": "^5.2.0",
         "@types/node": "^22.7.4",
         "@vitejs/plugin-vue": "^5.0.5",
         "@vue/cli-plugin-pwa": "~5.0.0",
