--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "embla-carousel-autoplay": "^8.3.0",
         "embla-carousel-vue": "^8.3.0",
         "firebase": "^10.13.2",
+        "lodash": "^4.17.21",
         "pinia": "^2.2.2",
         "radix-vue": "^1.9.6",
         "register-service-worker": "^1.7.2",
